# epiphany-binutils-gdb

./: .gitignore  COPYING.LIBGLOSS  README.md
bfd/: ChangeLog  ChangeLog.epiphany  bfd-in2.h  bfd.c  config.bfd  configure  elf-bfd.h  elf.c  elf32-epiphany.c  libbfd-in.h  libbfd.h  libpei.h  peXXigen.c  peicode.h  reloc.c
binutils/: ChangeLog  addr2line.c  cxxfilt.c  dlltool.c  nm.c  objdump.c  prdbg.c  stabs.c
binutils/doc/: binutils.texi
binutils/po/: vi.po
cpu/: ChangeLog.epiphany  epiphany.cpu  epiphany.opc
gas/: ChangeLog  ChangeLog.epiphany
gas/config/: tc-epiphany.c  tc-epiphany.h
gas/doc/: c-arm.texi  c-mips.texi
gas/testsuite/: ChangeLog.epiphany
gas/testsuite/gas/epiphany/: 64bit-err-uneven-regs.s  addr-syntax.d  allinsn.d  allinsn.exp  regression.d  sample.d  (+1 more)
gdb/: ChangeLog  ChangeLog.epiphany  Makefile.in  build-id.c  build-id.h  coffread.c  configure  configure.ac  configure.tgt  copying.c  dwarf2-frame.c  epiphany-tdep.c  gdbtypes.c  infcall.c  infrun.c  remote-sim.c  remote.c  remote.h  rs6000-tdep.h  valops.c
gdb/doc/: ChangeLog  ChangeLog.epiphany  gdb.texinfo
gdb/python/: py-objfile.c
gdb/testsuite/: ChangeLog  ChangeLog.epiphany
gdb/testsuite/gdb.base/: float.exp  sepdebug.exp
gdb/testsuite/gdb.reverse/: shr2.c
gdb/testsuite/lib/: future.exp  gdb.exp
gprof/: ChangeLog
include/: ChangeLog  ChangeLog.epiphany  bfdlink.h
include/elf/: epiphany.h
ld/: ChangeLog  ChangeLog.epiphany  Makefile.am  Makefile.in  configure.tgt
ld/emulparams/: elf32epiphany.sh
ld/emultempl/: elf32.em
ld/scripttempl/: epiphany_4x4.sc
opcodes/: ChangeLog  ChangeLog.epiphany  Makefile.in  epiphany-asm.c  epiphany-desc.c  epiphany-desc.h  epiphany-dis.c  epiphany-ibld.c  epiphany-opc.c  epiphany-opc.h
sim/: ChangeLog.epiphany  configure  configure.tgt
sim/common/: ChangeLog.epiphany  Make-common.in  acinclude.m4  cgen-ops.h  dv-cfi.c  dv-core.c  dv-glue.c  dv-pal.c  gennltvals.sh  hw-base.c  hw-device.h  nltvals.def  sim-arange.h  sim-core.h  sim-events.c  sim-hw.c  sim-hw.h  sim-memopt.c  sim-memopt.h  sim-profile.c  sim-profile.h
sim/epiphany/: ChangeLog  Makefile.in  README.esim  arch.c  arch.h  cgen-atomic.h  config.in  configure  configure.ac  cpu.c  cpu.h  cpuall.h  decode.c  decode.h  devices.c  dv-epiphany_dma.c  dv-epiphany_mem.c  dv-epiphany_timer.c  emesh.c  emesh.h  epiphany-elf-sim.py.in  epiphany-fp.c  epiphany-fp.h  epiphany-opc.h  epiphany-sim.h  epiphany.c  ert-workgroup.h  mem-barrier.h  mloop.in  model.c  oob-events.c  oob-events.h  profile.c  profile.h  sem-switch.c  sem.c  sim-if.c  sim-main.h  tconfig.h  tconfig.in  (+1 more)
sim/epiphany/esim/: esim-int.h  esim-net.c  esim-net.h  esim.c  esim.h
sim/epiphany/esim/test/: calculate_node_dims.c
sim/testsuite/: ChangeLog.epiphany  configure  configure.ac
sim/testsuite/epiphany-elf/: Makefile.in  hello.s
(+107 files in other folders)
